Remade anvil system